# termoj

./: LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: publish-pypi.yml
src/: __init__.py  api_client.py  cli.py  config.py  context.py  models.py  ui_controller.py
src/api/: __init__.py  base.py  course.py  problem.py  problemset.py  submission.py  user.py
src/commands/: __init__.py  auth.py  config.py  course.py  problem.py  problemset.py  submission.py  user.py
tests/: __init__.py
tests/test_api/: conftest.py  test_api_client.py  test_course.py  test_problem.py  test_problemset.py  test_submission.py  test_user.py
