[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "termoj"
version = "0.1.0"
description = "A terminal cli tool for SJTU ACM-OJ platform. Built with click and rich."
authors = [{ name = "uke", email = "uke_sjtu@sjtu.edu.cn" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["click>=8.0", "rich>=13.0", "pylatexenc>=2.0"]

[project.scripts]
termoj = "src.cli:cli"

[project.optional-dependencies]
dev = [
    "black==24.3.0",
    "isort==5.12.0",
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "tox",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip = ["venv/", ".venv/", "build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = """
    --cov=src
    --cov-report=term-missing
    --cov-report=html
    -v
"""
