[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termoj"
version = "0.1.2"
description = "A terminal cli tool for SJTU ACM-OJ platform. Built with click and rich."
authors = [{ name = "uke", email = "uke_sjtu@sjtu.edu.cn" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<3.12"
dependencies = ["click>=8.0", "rich>=13.0", "pylatexenc>=2.10", "requests>=2.0"]

[project.scripts]
termoj = "src.cli:cli"

[project.optional-dependencies]
dev = [
    "black~=24.3.0",     # Compatible with all 24.3.x versions
    "isort~=5.12.0",     # Compatible with all 5.12.x versions
    "pytest~=7.4.0",     # Compatible with all 7.4.x versions
    "pytest-cov~=4.1.0", # Compatible with all 4.1.x versions
    "tox~=4.23.0",       # Compatible with all 4.23.x versions
    "pydantic~=2.10.0",  # Compatible with all 2.10.x versions
    "twine>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip = ["venv/", ".venv/", "build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = """
    --cov=src
    --cov-report=term-missing
    --cov-report=html
    -v
"""


[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
